<resources>
    <string name="app_name">SharedMeal</string>
    <string name="title_activity_donor_login">DonorLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userName">Name</string>
    <string name="phone">Phone</string>
    <string name="Register">Register</string>
    <string name="databaseurl">https://shared-meal-ce571-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="mapsApi">AIzaSyBKQQZpd-t_FRsXayUWkKzRchm5qDAJkX8</string>
    <string-array name="VehicleType">
        <item>Bike</item>
        <item>Auto</item>
        <item>Heavy Vehicle</item>
    </string-array>
    <string-array name="Quantity">
        <item>10kg</item>
        <item>20kg</item>
        <item>30kg</item>
        <item>40kg</item>
        <item>50kg</item>
        <item>60kg</item>
        <item>70kg</item>
        <item>80kg</item>
        <item>90kg</item>
        <item>100kg</item>
    </string-array>
    <string-array name="donationType">
        <item>For People</item>
        <item>For Animals</item>
        <item>For Both</item>
    </string-array>
    <string name="title_activity_rider_map">RiderMapActivity</string>
</resources>