<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/userEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/userPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userPassword"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="203dp"
        android:layout_height="57dp"
        android:layout_marginTop="150dp"
        android:text="@string/Register"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="@+id/userPassword"
        app:layout_constraintStart_toStartOf="@+id/userPassword"
        app:layout_constraintTop_toBottomOf="@+id/userPassword"
        android:onClick="RegisterNew"/>

</androidx.constraintlayout.widget.ConstraintLayout>